# guix-tools

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  exec_tests.sh  remote_exec.sh  remote_test.sh  test.scm
scripts/: packageutils.scm  pxutils.scm  test.scm
scripts/guixtools/: package.scm
src/: CMakeLists.txt  guix-packages.cpp  guix-packages.h  guix-tools.cpp  guix-tools.h  main.cpp
